5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1836_2604.log
== SUBMITION (2019-06-27 11:48:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(shape(m)[0]):
	print(max(m[1]))
-- EXECUTION TIME:
1.19157
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2604/main.py", line 5, in <module>
    for i in range(shape(m)[0]):
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:49:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(shape(m)[0]):
	print(max(mat[1]))
-- EXECUTION TIME:
1.10737
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2604/main.py", line 5, in <module>
    for i in range(shape(m)[0]):
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:49:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(shape(m)[0]):
	print(max(mat[i]))
-- EXECUTION TIME:
1.17924
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2604/main.py", line 5, in <module>
    for i in range(shape(m)[0]):
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:49:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(shape(m)[0]):
	print(max(mat[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:50:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(shape(mat)[0]):
	print(max(mat[i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:50:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(shape(mat)[0]):
	print(max(mat[i]))
-- EXECUTION TIME:
1.33479
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
